refactor(uvm): migrate configuration API from uvm_config_db to uvm_resource_db
Replaced all uvm_config_db API usages with uvm_resource_db equivalents across the testbench.

Motivation: adopt uvm_resource_db for richer functionality (pseudo-scopes, read_by_type, non-component access) as recommended by Mark Glasser et al. in the papers:

"Configuration in UVM: The Missing Manual" and "The Untapped Power of UVM Resources and Why Engineers Should Use the uvm_resource_db API".

--- a/src/sim/Makefile
+++ b/src/sim/Makefile
@@ -38,7 +38,9 @@ run:
 	@echo "GUI mode: $(GUI)"
 	@echo "Coverage: $(COVERAGE)"
 	@echo "Script: $(TEMP_DO_FILE)"
+ifeq ($(GUI),0)
 	@echo "Log file: $(LOG_FILE)"
+endif
 	@echo "=========================================="
 	@cp $(DO_FILE) $(TEMP_DO_FILE)
 ifeq ($(GUI),0)
@@ -58,13 +60,17 @@ endif
 	@echo "=========================================="
 ifeq ($(GUI),0)
 	@vsim -c -do $(TEMP_DO_FILE) 2>&1 | tee $(LOG_FILE)
-else
-	@vsim -do $(TEMP_DO_FILE) 2>&1 | tee $(LOG_FILE)
-endif
 	@echo "=========================================="
 	@echo "Simulation complete!"
 	@echo "Script: $(TEMP_DO_FILE)"
 	@echo "Log: $(LOG_FILE)"
+else
+	@vsim -gui -do $(TEMP_DO_FILE)
+	@echo "=========================================="
+	@echo "GUI simulation complete!"
+	@echo "Script: $(TEMP_DO_FILE)"
+	@echo "Note: GUI mode does not save logs automatically"
+endif
 	@echo "=========================================="
 
 clean:
